WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281991
REGRESSION (
281333@main
) [Cocoa] Correct nullptr crashes in WKAccessibilityRootObject
https://bugs.webkit.org/show_bug.cgi?id=281991
Summary
REGRESSION (281333@main) [Cocoa] Correct nullptr crashes in WKAccessibilityRo...
Brent Fulgham
Reported
2024-10-23 10:33:55 PDT
The changes in
281333@main
removed a nullptr check. Our CI system is experiencing numerous crashes here, slowing our test system. This patch restores the missing nullptr check, and adds a few more in code paths impacted by the changes in
281333@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2024-10-23 10:34:05 PDT
<
rdar://134606621
>
Brent Fulgham
Comment 2
2024-10-23 10:42:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35636
EWS
Comment 3
2024-10-24 15:46:43 PDT
Committed
285671@main
(b246ebabcdfd): <
https://commits.webkit.org/285671@main
> Reviewed commits have been landed. Closing PR #35636 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug